--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         }
 
     </style>
-    <!--atualizando a página par ver se deu certo-->
+    <!--atualizando a página par ver se dar certo-->
 </head>
 <body>
     <header>
